[package]
name = "frost-ed25519-blake2b-wasm"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WASM bindings for frost-ed25519-blake2b"
repository = "https://github.com/ZcashFoundation/frost"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
frost-ed25519-blake2b = { path = "../..", features = ["serialization"] }
getrandom = { version = "0.2.16", features = ["js"] }
rand_core = { version = "0.6", features = ["getrandom"] }
wasm-bindgen = "0.2.105"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[workspace]
